Basic HTML form

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+            <label for="weatherLocation">Enter location here:</label>
+            <input type="text" id="weatherLocation" name="location">
+            <button id="submit">Submit</button>
+            <span class="error"></span>
+    </div>
 </body>
 </html>
