--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <div id="container">
-            <label for="weatherLocation">Enter location here:</label>
-            <input type="text" id="weatherLocation" name="location">
-            <button id="submit">Submit</button>
+            <!-- <label for="weatherLocation">Enter location here:</label> -->
+            <span class="searchbar">
+                <input type="text" id="weatherLocation" name="location">
+                <img id="submit"></img>
+            </span>
             <span class="error"></span>
     </div>
 </body>
