Add left and right navigation

--- a/src/template.html
+++ b/src/template.html
@@ -9,10 +9,12 @@
     <div id="container">
             <!-- <label for="weatherLocation">Enter location here:</label> -->
             <span class="searchbar">
-                <input type="text" id="weatherLocation" name="location">
+                <input type="text" id="weatherLocation" name="location" autocomplete="off">
                 <img id="submit"></img>
             </span>
             <span class="error"></span>
+            <img id="slideRight"></img>
+            <img id="slideLeft"></img>
     </div>
 </body>
 </html>
